Updated swagger.json, added Dockerfiles, added users schema
